-Fixed the cube (it was a little off-center)

--- a/ForumSystem/ForumSystem/wwwroot/css/StyleSheet.css
+++ b/ForumSystem/ForumSystem/wwwroot/css/StyleSheet.css
@@ -95,8 +95,8 @@ nav ul {
         }
 
 .cubeImage {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     vertical-align: central;
 }
 
